--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_ja.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/resources/org/guvnor/ala/ui/openshift/client/resources/i18n/GuvnorAlaOpenShiftUIConstants_ja.properties
@@ -16,9 +16,9 @@
 
 OpenShiftProviderConfigView.ProviderType=プロバイダータイプ
 OpenShiftProviderConfigView.ProviderName=プロバイダー名
-OpenShiftProviderConfigView.MainURL=マスター URL
+OpenShiftProviderConfigView.MainURL=メイン URL
 OpenShiftProviderConfigView.UserName=ユーザ名
-OpenShiftProviderConfigView.Password=Password
+OpenShiftProviderConfigView.Password=パスワード
 
 TemplateParamsFormView.Title=Kie サーバーパラメーター
 TemplateParamsFormView.TemplateURL=テンプレート URL
