--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_fr.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_fr.properties
@@ -86,7 +86,7 @@ ProviderTypeView.Providers=FOURNISSEURS
 ProviderTypeView.Runtimes=RUNTIMES
 ProviderTypeView.Disable=Désactiver
 ProviderTypeView.ProviderTypeDisablePopupTitle=Désactiver le type de fournisseur
-ProviderTypeView.ProviderTypeDisablePopupText=Êtes-vous sûr de vouloir désactiver le type de fournisseur actuel ? <BR>Les fournisseurs apparentés ne seront pas accessibles à partir de cet écran tant que le type de fournisseur n''est pas à nouveau activé.
+ProviderTypeView.ProviderTypeDisablePopupText=Voulez-vous vraiment désactiver le type de fournisseur actuel ? <BR>Les fournisseurs liés ne seront pas accessibles à partir de cet écran tant que le type de fournisseur n’aura pas été réactivé.
 ProviderConfigEmptyView.Title=Fournisseur manquant
 ProviderConfigEmptyView.ProviderTypeNotProperlyConfiguredMessage=Le type de fournisseur n''a pas été correctement configuré. Il s''avérera impossible d''ajouter un fournisseur
 RuntimePresenter.RuntimeStartAction=Démarrer le runtime
@@ -100,7 +100,7 @@ RuntimePresenter.RuntimeDeletingMessage=Suppression du runtime
 RuntimePresenter.RuntimeDeletingForcedMessage=Suppression forcée du runtime
 RuntimePresenter.RuntimeDeleteSuccessMessage=Le runtime {0} a bien été supprimé
 RuntimePresenter.RuntimeDeleteFailedTitle=Échec de la suppression du runtime
-RuntimePresenter.RuntimeDeleteFailedMessage=L''opération de suppression a généré l''erreur suivante :<BR> {0} <BR><BR>Voulez-vous forcer la suppression du runtime ?
+RuntimePresenter.RuntimeDeleteFailedMessage=L’opération de suppression a généré l’erreur suivante : <BR> {0} <BR><BR>Voulez-vous forcer la suppression du runtime ?
 RuntimePresenter.RuntimeConfirmForcedDeleteTitle=Forcer la suppression du runtime
 RuntimePresenter.RuntimeConfirmForcedDeleteMessage=Voulez-vous vraiment forcer la suppression du runtime ?
 RuntimePresenter.RuntimeConfirmDeleteTitle=Supprimer le runtime
