--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_ja.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_ja.properties
@@ -63,7 +63,7 @@ ProviderView.Refresh=更新
 ProviderView.Remove=削除
 ProviderView.RemoveProviderErrorMessage=プロバイダーの削除に失敗しました。
 ProviderView.RemoveProviderSuccessMessage=プロバイダーが削除されました。
-ProviderView.Status=ステータス
+ProviderView.Status=状態
 ProviderView.Config=設定
 ProviderStatusEmptyView.ProviderNotInUseMessage=このプロバイダーは、現在ランタイムには使用されていません。
 ProviderStatusEmptyView.NoRuntimes=ランタイムがありません
@@ -72,7 +72,7 @@ ProviderEmptyView.AddProvider=プロバイダーの追加
 ProviderEmptyView.AddAProvider=プロバイダーの追加
 ProviderEmptyView.Documentation=ドキュメント
 ProviderEmptyView.LearnMoreMessage=このトピックの詳細はドキュメントを参照してください。
-ProviderEmptyView.NoAssociatedProvidersMessage=このプロバイダータイプには現在プロバイダーがありません。開始するには、
+ProviderEmptyView.NoAssociatedProvidersMessage=このプロバイダータイプには現在プロバイダーがありません。開始方法: 
 ProviderTypeEmptyView.Documentation=ドキュメント
 ProviderTypeEmptyView.GetStartedMessage=開始するには、まず以下を有効にする必要があります。
 ProviderTypeEmptyView.GetStartedWithProvisioning=プロビジョニングを開始する
@@ -86,7 +86,7 @@ ProviderTypeView.Providers=プロバイダー
 ProviderTypeView.Runtimes=ランタイム
 ProviderTypeView.Disable=無効
 ProviderTypeView.ProviderTypeDisablePopupTitle=プロバイダータイプの無効化
-ProviderTypeView.ProviderTypeDisablePopupText=現行のプロバイダータイプを無効にしてよろしいですか？<BR>プロバイダータイプが再度有効になるまで、関連プロバイダーには、この画面からアクセスできません。
+ProviderTypeView.ProviderTypeDisablePopupText=現行のプロバイダータイプを無効にしてよろしいですか? <BR>関連プロバイダーには、プロバイダータイプが再度有効になるまで、この画面からアクセスできません。
 ProviderConfigEmptyView.Title=プロバイダーがありません
 ProviderConfigEmptyView.ProviderTypeNotProperlyConfiguredMessage=プロバイダーの種類が正しく設定されていません。プロバイダーを追加することはできません
 RuntimePresenter.RuntimeStartAction=ランタイムの起動
