--- a/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_es.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_es.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-WF10ProviderConfigView.TestConnectionSuccessfulMessage=Prueba de conexión satisfactoria
-WF10ProviderConfigView.TestConnectionFailMessage=<strong>Prueba de conexión de gestión fallida:{0}
+WF10ProviderConfigView.TestConnectionSuccessfulMessage=<strong>Prueba de conexión de gestión satisfactoria:</strong><BR>{0}
+WF10ProviderConfigView.TestConnectionFailMessage=<strong>Error en la prueba de conexión de gestión:</strong><BR>{0}
 WF10ProviderConfigView.AllParamsNeedsCompletionForValidationMessage=Todos los parámetros deben completarse para llevar a cabo la validación
 WF10ProviderConfigView.TestConnectionUnExpectedErrorMessage=Se produjo un error durante la prueba de conexión: {0}
 WF10ProviderConfigView.ProviderType=Tipo de proveedor
