--- a/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_ja.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-wildfly/kie-wb-common-ala-wildfly-ui/kie-wb-common-ala-wildfly-ui-client/src/main/resources/org/guvnor/ala/ui/wildfly/client/resources/i18n/GuvnorAlaWildflyUIConstants_ja.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-WF10ProviderConfigView.TestConnectionSuccessfulMessage=管理接続テストに成功しました:</strong><BR>{0}
-WF10ProviderConfigView.TestConnectionFailMessage=管理接続テストに失敗しました:</strong><BR>{0}
+WF10ProviderConfigView.TestConnectionSuccessfulMessage=<strong>管理接続テストに成功しました:</strong><BR>{0}
+WF10ProviderConfigView.TestConnectionFailMessage=<strong>管理接続テストに失敗しました:</strong><BR>{0}
 WF10ProviderConfigView.AllParamsNeedsCompletionForValidationMessage=検証を実行するには、すべてのパラメーターを完了する必要があります
 WF10ProviderConfigView.TestConnectionUnExpectedErrorMessage=接続テスト時にエラーが発生しました: {0}
 WF10ProviderConfigView.ProviderType=プロバイダータイプ
@@ -23,6 +23,6 @@ WF10ProviderConfigView.Host=ホスト
 WF10ProviderConfigView.Port=ポート
 WF10ProviderConfigView.ManagementPort=管理ポート
 WF10ProviderConfigView.UserName=ユーザ名
-WF10ProviderConfigView.Password=Password
+WF10ProviderConfigView.Password=パスワード
 WF10ProviderConfigView.TestConnection=テスト接続
 
