--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_es.properties
@@ -113,7 +113,7 @@ org.kie.workbench.common.dmn.api.property.dmn.TextFormat.label=Formato de texto
 org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=Tipo MIME de texto
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=Enlaces de documentación
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=Ítems de documentación externos para la forma
-org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Detalles del Servicio de Decisiones
+org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Servicio de decisión
 
 #######################
 # Font property
