--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_ja.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants_ja.properties
@@ -63,10 +63,10 @@ org.kie.workbench.common.dmn.api.definition.model.Import.label=インポート
 org.kie.workbench.common.dmn.api.definition.model.InformationItem.label=情報アイテム
 org.kie.workbench.common.dmn.api.definition.model.InformationItemPrimary.label=情報アイテム
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.expression=式
-org.kie.workbench.common.dmn.api.definition.model.ConstraintType.enumeration=列挙
+org.kie.workbench.common.dmn.api.definition.model.ConstraintType.enumeration=リスト
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.range=範囲
 org.kie.workbench.common.dmn.api.definition.model.ConstraintType.none=なし
-org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=タイプを選択
+org.kie.workbench.common.dmn.api.definition.model.ConstraintType.selectType=型を選択
 
 #######################
 # Background property
@@ -97,7 +97,7 @@ org.kie.workbench.common.dmn.api.property.dmn.Description.label=説明
 org.kie.workbench.common.dmn.api.property.dmn.Description.description=シェイプの説明
 org.kie.workbench.common.dmn.api.property.dmn.ExpressionLanguage.label=式言語
 org.kie.workbench.common.dmn.api.property.dmn.ExpressionLanguage.description=式言語
-org.kie.workbench.common.dmn.api.property.dmn.Id.label=ID
+org.kie.workbench.common.dmn.api.property.dmn.Id.label=Id
 org.kie.workbench.common.dmn.api.property.dmn.Id.description=シェイプの識別子
 org.kie.workbench.common.dmn.api.property.dmn.KnowledgeSourceType.label=ソースタイプ
 org.kie.workbench.common.dmn.api.property.dmn.KnowledgeSourceType.description=シェイプのソースタイプ
@@ -105,12 +105,12 @@ org.kie.workbench.common.dmn.api.property.dmn.LocationURI.label=場所 URI
 org.kie.workbench.common.dmn.api.property.dmn.LocationURI.description=シェイプの場所
 org.kie.workbench.common.dmn.api.property.dmn.NameHolder.label=名前
 org.kie.workbench.common.dmn.api.property.dmn.NameHolder.description=シェイプの名前
-org.kie.workbench.common.dmn.api.property.dmn.QNameHolder.label=データタイプ
-org.kie.workbench.common.dmn.api.property.dmn.QNameHolder.description=データタイプ
+org.kie.workbench.common.dmn.api.property.dmn.QNameHolder.label=データ型
+org.kie.workbench.common.dmn.api.property.dmn.QNameHolder.description=データ型
 org.kie.workbench.common.dmn.api.property.dmn.Question.label=質問
 org.kie.workbench.common.dmn.api.property.dmn.Question.description=質問
 org.kie.workbench.common.dmn.api.property.dmn.TextFormat.label=テキスト形式
-org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=テキストの MIME タイプ
+org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=テキストの MIME 型
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=ドキュメントリンク
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=シェイプ用の外部ドキュメント項目
 org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=デシジョンサービスの詳細
@@ -137,7 +137,7 @@ ImportedValues.DomainObjectName=インポートした値
 UnaryTests.DomainObjectName=単項テスト
 InformationItem.DomainObjectName=情報アイテム
 InformationItemPrimary.DomainObjectName=情報アイテム
-Decision.DomainObjectName=デシジョン
+Decision.DomainObjectName=ディシジョン
 BusinessKnowledgeModel.DomainObjectName=ビジネスナレッジモデル
 InputClause.DomainObjectName=Input 句
 OutputClause.DomainObjectName=Output 句
