--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_es.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_es.properties
@@ -68,7 +68,7 @@ ParametersPopoverViewImpl.addParameter=Agregar parámetro
 DecisionTableEditor.InsertRuleAnnotationClauseLeft=Insertar a la izquierda
 DecisionTableEditor.InsertRuleAnnotationClauseRight=Insertar a la derecha
 DecisionTableEditor.DeleteRuleAnnotationClause=Eliminar
-DecisionTableEditor.RuleAnnotationClauseHeader=Anotación de reglas
+DecisionTableEditor.RuleAnnotationClauseHeader=agregar anotación
 DecisionTableEditor.SelectRuleAnnotationName=Nombre de la anotación de la regla
 DecisionTableEditor.DescriptionColumnHeader=Descripción
 DecisionTableEditor.InputClauseHeader=Cláusula de entrada
@@ -115,7 +115,7 @@ DataTypeListView.Title=Tipos de datos personalizados
 DataTypeListView.NoCustomDataTitle=No definieron tipos de datos personalizados.
 DataTypeListView.NoCustomData1=Los tipos de datos están referenciados en los valores de entrada y salida de las tablas de decisión. Los tipos de datos personalizados permiten hacer referencia a tipos de datos más complejos, más allá de los tipos simples "por defecto".
 DataTypeListView.NoCustomData2=Actualmente no hay tipos de datos personalizados disponibles para Para comenzar, agregue un tipo de dato personalizados.
-DataTypeListView.AddACustomDataType=Añadir un tipo de datos personalizado
+DataTypeListView.AddACustomDataType=Tipos de datos personalizados
 DataTypeListView.NoCustomDataTypesFound1=No se encontraron tipos de datos personalizados.
 DataTypeListView.NoCustomDataTypesFound2=Pruebe con un nombre de tipo de datos diferente.
 DataTypeListView.NewDataType=El tipo de datos
@@ -148,10 +148,10 @@ DataTypeListItemView.Edit=Editar (Ctrl + E)
 DataTypeListItemView.Save=Guardar (Ctrl + S)
 DataTypeListItemView.AddRowBelow=Añadir fila abajo (Ctrl + B)
 DataTypeListItemView.Remove=Eliminar (Ctrl + Retroceso)
-DataTypeListItemView.Cancel=Cancelar (Esc)
+DataTypeListItemView.Cancel=Cancelar trabajo
 DataTypesPage.Title=Tipos de datos
 IncludedModelsPage.Title=Modelos incluidos
-DataTypeSearchBarView.Search=Búsqueda de tipos de datos
+DataTypeSearchBarView.Search=No hay tipos de datos.
 DataTypeConstraintView.AddConstraints=Agregar limitaciones
 DataTypeConstraintView.ConstraintsTooltip=Agregar restricciones para limitar y definir la entrada válida para el tipo de datos
 DataTypeConstraintModalView.BodyParagraph1=Agregar restricciones para limitar y definir la entrada válida para el 
@@ -292,10 +292,16 @@ DRDActions.ContextMenu.Title=Agregar acciones
 DRDActions.ContextMenu.Actions.Create=Crear
 DRDActions.ContextMenu.Actions.AddTo=Añadir a
 DRDActions.ContextMenu.Actions.Remove=Quitar
-DRDNameChangerView.ReturnToDRGMessage=Ver DRG
+DRDNameChangerView.ReturnToDRGMessage=Ver la diferencia
 DRDNameChangerView.DRDDescriptionMessage=(Diagrama de requisitos de decisión)
 DecisionServiceParameters.Inputs=Datos de entrada
 DecisionServiceParameters.Outputs=Decisiones de salida
 DecisionServiceParameters.EncapsulatedDecisions=Decisiones encapsuladas
 ParameterGroup.None=Ninguno
+DataTypeSelectView.Structure=Estructura
+StructureTypesTooltipView.DescriptionStructured="{0}" es un tipo de datos estructurado con \ {1\} campos.
+StructureTypesTooltipView.DescriptionCustom=Tipos de datos personalizados
+StructureTypesTooltipView.DescriptionIncluded="{0}" es un tipo de dato externo de un modelo incluido.
+StructureTypesTooltipView.ViewDataType=Ver este tipo de datos
+StructureTypesTooltipView.Structure=Estructura
 
