--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_fr.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants_fr.properties
@@ -59,7 +59,7 @@ ListEditor.EditExpression=Liste d''édition
 FunctionEditor.FEEL=FEEL
 FunctionEditor.JAVA=JAVA
 FunctionEditor.PMML=PMML
-FunctionEditor.Undefined=<Undefined>
+FunctionEditor.Undefined=<Non défini>
 FunctionEditor.EditExpression=Modifier l''expression
 FunctionEditor.EditParameters=Modifier les paramètres
 FunctionEditor.EditParametersTitle=Modifier les paramètres
@@ -84,7 +84,7 @@ DecisionTableEditor.InsertDecisionRuleAbove=Insérer au-dessus
 DecisionTableEditor.InsertDecisionRuleBelow=Insérer en dessous
 DecisionTableEditor.DeleteDecisionRule=Supprimer
 DecisionTableEditor.DuplicateDecisionRule=Dupliquer
-DecisionTableEditor.NullBuiltinAggregator=<None>
+DecisionTableEditor.NullBuiltinAggregator=<Aucun>
 DecisionTableEditor.EditHitPolicy=Modifier la politique d''accès
 DecisionTableEditor.EditInputClause=Modifier la clause d''entrée
 DecisionTableEditor.EditOutputClause=Modifier la clause de sortie
@@ -298,4 +298,10 @@ DecisionServiceParameters.Inputs=Données d''entrée
 DecisionServiceParameters.Outputs=Décisions sur les résultats
 DecisionServiceParameters.EncapsulatedDecisions=Décisions encapsulées
 ParameterGroup.None=Aucun
+DataTypeSelectView.Structure=Structure
+StructureTypesTooltipView.DescriptionStructured="{0}" est un type de données structuré avec des champs {1}.
+StructureTypesTooltipView.DescriptionCustom="{0}" est un type de données personnalisé.
+StructureTypesTooltipView.DescriptionIncluded="{0}" est un type de données externe provenant d''un modèle inclus.
+StructureTypesTooltipView.ViewDataType=Afficher ce type de données
+StructureTypesTooltipView.Structure=Structure
 
