--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_es.properties
@@ -78,5 +78,5 @@ ErrorMessageDisplayerViewImpl.closeAndReview=Cierre el editor de formularios y r
 ErrorMessageDisplayerViewImpl.continue=Proceda al editor de formularios
 
 FormEditorService.shortKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador.
-FormEditorService.longKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador. Mensaje de error:
+FormEditorService.longKey=No puede cargarse el formulario debido a un error en el servidor. Intente cerrar el formulario y vuelva a abrirlo, y si el problema persiste, consulte con el administrador. <br/>Mensaje completo de error: <br/>{0}
 FormEditorPresenter.propertiesEditor=Propiedades del campo
