--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_fr.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_fr.properties
@@ -21,7 +21,7 @@ FormEditorViewImpl.preview=Aperçu
 FormEditorViewImpl.saveBeforeRename=Voulez-vous enregistrer les modifications actuelles avant le changement de nom ? Dans le cas contraire, les modifications seront perdues.
 
 FormEditorPresenter.unexpectedError=Une erreur inattendue s''est produite lors du chargement du formulaire en cours. Essayez de fermer le formulaire, puis ouvrez-le à nouveau. Si l''erreur persiste, contactez votre administrateur et vérifiez la présence d''un
-FormEditorPresenter.formUsages= Formulaire : <B><I>{0}</I></B> est utilisé pour les ressources suivantes. Voulez-vous quand même le supprimer ?
+FormEditorPresenter.formUsages= Formulaire : <B><I>{0}</I></B> est utilisé dans les actifs suivants. Voulez-vous quand même le supprimer ?
 FormEditorPresenter.layoutTitle=Créer un formulaire
 FormEditorPresenter.layoutSubTitle=Faites glisser un élément ici pour commencer à compiler un nouveau formulaire.
 FormEditorPresenter.componentsPalette=Contrôles de formulaire
@@ -78,5 +78,5 @@ ErrorMessageDisplayerViewImpl.closeAndReview=Fermer l''éditeur de formulaires e
 ErrorMessageDisplayerViewImpl.continue=Passer à l''éditeur de formulaires
 
 FormEditorService.shortKey=Impossible de charger le formulaire en raison d''une erreur sur le serveur. Essayez de fermer le formulaire, puis de le rouvrir. Si le problème persiste, contactez votre administrateur.
-FormEditorService.longKey=Impossible de charger le formulaire en raison d''une erreur sur le serveur. Essayez de fermer le formulaire, puis de le rouvrir. Si le problème persiste, contactez votre administrateur. <br/>Message erreur complet : <br/>{0}
+FormEditorService.longKey=Impossible de charger le formulaire en raison d''une erreur sur le serveur. Essayez de fermer le formulaire, puis de le rouvrir. Si le problème persiste, contactez votre administrateur. <br/>Message d’erreur complet : <br/>{0}
 FormEditorPresenter.propertiesEditor=Propriétés du champ
