--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_ja.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_ja.properties
@@ -21,7 +21,7 @@ FormEditorViewImpl.preview=プレビュー
 FormEditorViewImpl.saveBeforeRename=ファイル名の変更前に現在の変更を保存しますか?保存しない場合には、変更内容が失われます
 
 FormEditorPresenter.unexpectedError=現在のフォームのロード中に予期しないエラーが発生しました。フォームを閉じてから再度開いてください。エラーが解決しない場合は、管理者に連絡して問題がないか確認してください
-FormEditorPresenter.formUsages= フォーム: <B><I>{0}</I></B> は以下のアセットに使われています。削除しますか?
+FormEditorPresenter.formUsages= フォーム: <B><I>{0}</I></B> は以下のアセットに使われています。削除しますか？
 FormEditorPresenter.layoutTitle=新規フォームの作成
 FormEditorPresenter.layoutSubTitle=ここにコンポーネントをドラッグして新規フォームを構築
 FormEditorPresenter.componentsPalette=フォームコントロール
@@ -42,7 +42,7 @@ DataObjectsAdminViewImpl.dataObjectID=データオブジェクト識別子
 DataObjectsAdminViewImpl.dataObjectType=データオブジェクトタイプ
 DataObjectsAdminViewImpl.addDataObject=データオブジェクト追加
 DataObjectsAdminViewImpl.idCannotBeEmpty=データオブジェクトIDは空にできません。
-DataObjectsAdminViewImpl.idAreadyExists=データオブジェクトIDは固有でなければいけません。同じIDのデータオブジェクトがすでに存在します。
+DataObjectsAdminViewImpl.idAreadyExists=データオブジェクトIDは固有でなければいけません。同じIDのデータオブジェクトが既に存在します。
 DataObjectsAdminViewImpl.typeCannotBeEmpty=データオブジェクトタイプは空にできません。
 DataObjectsAdminViewImpl.emptyDataObjectsTable=データオブジェクトが設定されていません。
 DataObjectsAdminViewImpl.remove=削除
