--- a/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_fr.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-integrations/kie-wb-common-forms-jbpm-integration/kie-wb-common-forms-jbpm-integration-client/src/main/resources/org/kie/workbench/common/forms/jbpm/client/resources/i18n/Constants_fr.properties
@@ -9,10 +9,10 @@ org.kie.workbench.common.forms.jbpm.model.authoring.process.BusinessProcessFormM
 org.kie.workbench.common.forms.jbpm.model.authoring.task.TaskFormModel=Tâche
 
 MissingProcess.shortMessage=Impossible de trouver le processus avec l''ID ''{0}'' sur le projet.
-MissingProcess.fullMessage=Impossible de trouver le processus avec l''ID ''{0}'' sur le projet. <br/>Cela signifie généralement que le processus a été supprimé ou qu''il est malformé. Fermez le formulaire et vérifiez que le processus existe, puis ouvrez à nouveau le formulaire. Si l''erreur persiste, vérifiez auprès de votre administrateur ou générez à nouveau le formulaire. <br/>Si le formulaire n''est plus nécessaire, veuillez le supprimer pour éviter tout problème éventuel.
+MissingProcess.fullMessage=Impossible de trouver le processus avec l’ID ''{0}'' sur le projet. <br/>Cela signifie généralement que le processus a été supprimé ou qu’il est malformé. Fermez le formulaire et vérifiez que le processus existe, puis ouvrez à nouveau le formulaire. Si l’erreur persiste, contactez votre administrateur ou générez à nouveau le formulaire. <br/>Si le formulaire n’est plus nécessaire, veuillez le supprimer afin d’éviter tout problème.
 
 MissingTask.shortMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''.
-MissingTask.fullMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''. <br/>Cela signifie généralement que la tâche a été supprimée du processus ou que le formulaire a été généré avant que le processus ne soit sauvegardé. <br/>Veuillez fermer le formulaire et vérifier que la tâche existe dans le processus, sauvegarder le processus et régénérer le formulaire. <br/>Si le formulaire n''est plus nécessaire, veuillez le supprimer pour éviter tout problème éventuel.
+MissingTask.fullMessage=Impossible de trouver une tâche nommée ''{0}'' dans le processus ''{1}''. <br/>Cela signifie généralement que la tâche a été supprimée du processus ou que le formulaire a été généré avant l’enregistrement du processus. <br/>Veuillez fermer le formulaire et vérifier que la tâche existe dans le processus, enregistrer le processus et régénérer le formulaire. <br/>Si le formulaire n’est plus nécessaire, veuillez le supprimer afin d’éviter tout problème.
 
 process=Processus
 
