--- a/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/src/main/resources/org/kie/workbench/common/screens/contributors/client/resources/i18n/ContributorsConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-contributors/kie-wb-common-contributors-client/src/main/resources/org/kie/workbench/common/screens/contributors/client/resources/i18n/ContributorsConstants_ja.properties
@@ -2,7 +2,7 @@ contributorsPerspectiveName=コントリビューター
 contributorsDataSetOutdated=コントリビューターデータセットが変更されました。ダッシュボードを更新中 ...
 numberOfCommits=コミット数
 numberOfCommitsEvolution=コミットの進化
-date=Date
+date=日付
 organizationalUnit=組織単位
 numberOfRepositories=リポジトリー数
 numberOfContributors=コントリビューターの数
