--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_es.properties
@@ -45,13 +45,13 @@ modelEditor_copying_error=Se produjo un error durante la copia de archivos
 
 modelEditor_confirm_save_model_before_project_change_=Se ha modificado el modelo de datos del proyecto actual, ¿desea guardarlo antes de cambiar de: \n\nproyecto: {0} \n\na\n\nproyecto: {1}
 
-modelEditor_confirm_save_model_before_project_change=Se ha modificado el modelo de datos del proyecto actual, ¿desea que se guarden los cambios antes de pasar de:project: {0}a proyecto: {1} ?
+modelEditor_confirm_save_model_before_project_change=Se ha <B><I> modificado</I></B> el modelo de datos del proyecto actual. ¿Desea que sus cambios se <B><I> guarden</I></B> antes de <B><I>cambiar</I></B> de:</BR>proyecto: {0} </BR>a</BR>proyecto: {1}?
 
-modelEditor_confirm_save_model_before_project_change_force=El usuario {0} ha actualizado el modelo de datos del proyecto {1} actual, probablemente en otra sesión o editor
+modelEditor_confirm_save_model_before_project_change_force=Usuario {0} <B><I>actualizado</I></B> proyecto actual {1} modelo de datos, probablemente en otra sesión o editor.</BR>¿Desea <B><I>forzar<\I></B> que sus cambios se <B><I>>guarden</I></B> antes de <B><I> cambiar</I></B> los proyectos?
 
 modelEditor_notify_project_change_=El proyecto actual se cambiará desde: \n\nproyecto: {0} \n\na\n\nproyecto: {1}
 
-modelEditor_notify_project_change=El proyecto actual se cambiará de:proyecto: {0}a proyecto: {1}.
+modelEditor_notify_project_change=El proyecto actual se <B><I>cambiará</I></B> desde:</BR>proyecto: {0}</BR>a</BR>proyecto: {1}.
 
 modelEditor_notify_readonly_objects_read=Los siguientes objetos de datos fueron creados o han sido modificados por un editor externo y se abrirán en modo de solo lectura.
 
@@ -261,7 +261,7 @@ persistence_domain_objectEditor_audited_field_help=Marque este objeto de datos p
 
 persistence_domain_objectEditor_on_make_persistable_message=Un objeto de datos ya creado está a punto de hacerse persistente
 
-persistence_domain_objectEditor_required_identifier_is_missing_message=El campo de identificación requerido no se encontró en el objeto de datos actual. <B><I>¿Quiere generarlo automáticamente?</I></B></BR></BR>
+persistence_domain_objectEditor_required_identifier_is_missing_message=No se encontró el campo requerido <B><I>Identificador</I></B> en el actual objeto de datos. <B><I>¿Desea generarlo automáticamente?</I></B></BR></BR>
 
 persistence_domain_objectEditor_review_relationship_fields_message=Es posible que los siguientes campos de relaciones tengan que revisarse manualmente para agregar cualquier opción faltante de configuración de relaciones:
 
