--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/src/main/resources/org/kie/workbench/common/screens/datamodeller/client/resources/i18n/Constants_fr.properties
@@ -45,13 +45,13 @@ modelEditor_copying_error=Une erreur s''est produite lors de la copie du fichier
 
 modelEditor_confirm_save_model_before_project_change_=Le modèle de données du projet actuel a été modifié. Voulez-vous l''enregistrer avant de passer du : \n\nprojet : {0} \n\nau\n\nprojet : {1}
 
-modelEditor_confirm_save_model_before_project_change=Le modèle de données du projet actuel a été <B><I>modifié</I></B>, souhaitez-vous que vos changements soient <B><I>sauvegardés</I></B> avant de <B><I>passer </I></B> du :</BR>projet: {0}</BR>au</BR>projet : {1} ?
+modelEditor_confirm_save_model_before_project_change=Le modèle de données du projet actuel a été <B><I>modifié</I></B>. Voulez-vous que vos modifications soient <B><I>enregistrées</I></B> avant de <B><I>passer</I></B> du :</BR>projet : {0}</BR>au</BR>projet : {1} ?
 
-modelEditor_confirm_save_model_before_project_change_force=Utilisateur {0} <B><I>a mis à jour </I></B> projet en cours {1} data model, sans doute au cours d''une autre session ou dans l''éditeur..</BR>Voulez-vous <B><I>forcer</I></B> vos changements afin qu''il soient <B><I>sauvegardés</I></B> avant de <B><I>changer</I></B> de projets?
+modelEditor_confirm_save_model_before_project_change_force=L’utilisateur {0} a <B><I>mis à jour</I></B> le modèle de données du projet {1} en cours, probablement dans une autre session ou un autre éditeur.</BR>Voulez-vous <B><I>forcer</I></B> l’<B><I>enregistrement</I></B> de vos modifications avant de <B><I>changer</I></B> de projet ?
 
 modelEditor_notify_project_change_=Le projet actuel qui est : \n\nprojet : {0} \n\nau\n\nprojet : {1}
 
-modelEditor_notify_project_change=Le projet actuel <B><I>passera </I></B> du:</BR>projet: {0}</BR>au</BR>projet: {1}.
+modelEditor_notify_project_change=Le projet actuel qui est :</BR>projet : {0}</BR><B><I>sera remplacé par</I></B></BR>projet : {1}.
 
 modelEditor_notify_readonly_objects_read=Les objets de données suivants ont été créés ou modifiés par un éditeur externe et seront ouverts en mode lecture seule.
 
@@ -64,7 +64,7 @@ modelEditor_notification_dataModel_loaded=Le modèle de données pour le projet 
 modelEditor_notification_dataModel_saved=Le modèle de données a été enregistré en {0} secondes
 modelEditor_notification_dataObject_referenced_has_been_deleted=La classe {0} utilisée par la classe {1} a été supprimée
 
-modelEditor_message_file_parsing_errors=Le fichier Java n''a pas pu être analysé. Il sera impossible d''ouvrir l''onglet Éditeur. Utilisez plutôt l''onglet Source.
+modelEditor_message_file_parsing_errors=Le fichier Java n’a pas pu être analysé. Il sera impossible d’ouvrir l’onglet Éditeur. Utilisez plutôt l’onglet Source.
 modelEditor_confirm_save_before_rename=Voulez-vous enregistrer les dernières modifications avant de renommer le fichier ?
 modelEditor_confirm_deletion_of_used_class=La classe <B><I>{0}</I></B> est utilisée dans les fichiers suivants. Voulez-vous quand même la supprimer ?
 modelEditor_confirm_renaming_of_used_class=La classe <B><I>{0}</I></B> est utilisée dans les fichiers suivants. Voulez-vous quand même la renommer ?
@@ -108,7 +108,7 @@ objectBrowser_action_add_field=ajouter un champ
 objectBrowser_readonlyLabel=lecture seule
 objectBrowser_externallyModifiedLabel=modifié en externe
 objectBrowser_action_goToDataObjectDefinition=Accéder à la définition de l''objet de données
-objectBrowser_message_file_not_exists_or_renamed=Il semble que le fichier {0} ait été renommé ou supprimé du serveur. &#8217;Il ne sera pas possible de l''ouvrir.
+objectBrowser_message_file_not_exists_or_renamed=Il semble que le fichier {0} ait été renommé ou supprimé du serveur. Il ne sera pas possible de l’ouvrir.
 
 objectEditor_dataObjectTitle=Objet de données
 objectEditor_nameLabel=Identifiant
@@ -122,13 +122,13 @@ objectEditor_typeSafeLabel=TypeSafe
 objectEditor_typeSafeHelp=Définit le type de comportement sûr pour un type. Si cette option est définie, le type de comportement sûr est activé (vrai) ou désactivé (faux). Par défaut, toutes les déclarations de type sont compilées avec le type de sécurité activé. (Voir Drools Fusion)
 
 objectEditor_timestampLabel=Horodatage
-objectEditor_timestampHelp=Définit l''horodatage d''un événement. &#8217;Si cette option est définie, l''utilisateur peut indiquer au moteur d''utiliser l''horodatage de l''attribut de l''événement au lieu de le lire à partir de l''horloge de session. Dans le cas contraire, le moteur attribuera automatiquement un horodatage à l''événement. (Voir Drools Fusion)
+objectEditor_timestampHelp=Définit l''horodatage d''un événement. Si cette option est définie, l’utilisateur peut indiquer au moteur d’utiliser l’horodatage de l’attribut de l’événement au lieu de le lire à partir de l’horloge de session. Dans le cas contraire, le moteur attribuera automatiquement un horodatage à l''événement. (Voir Drools Fusion)
 
 objectEditor_durationLabel=Durée
-objectEditor_durationHelp=Définit la durée d''un événement. &#8217;Si cette option est définie, l''utilisateur peut déclarer lequel des attributs de l''événement contient la durée de l''événement. Dans le cas contraire, la durée par défaut de tous les événements est égale à 0. (Voir Drools Fusion)
+objectEditor_durationHelp=Définit la durée d''un événement. Si cette option est définie, l’utilisateur peut déclarer lequel des attributs de l’événement contient la durée de l’événement. Dans le cas contraire, la durée par défaut de tous les événements est égale à 0. (Voir Drools Fusion)
 
 objectEditor_expiresLabel=Expire
-objectEditor_expiresHelp=Définit le décalage de temps ("timeOffset") pour l''expiration d''un événement. Si l''option est définie, cette valeur doit être un intervalle temporel sous la forme :</BR>&nbsp;&nbsp;[#d][#h][#m][#s][#[ms]]</BR> Où [ ] représente un paramètre facultatif et # représente une valeur numérique.</BR>Par ex.: 1d2h, signifie un jour et deux heures. (Voir Drools Fusion)
+objectEditor_expiresHelp=Définit le "timeOffset" pour une expiration d''événement.Si elle est définie, cette valeur doit être un intervalle temporel sous la forme:</BR>&nbsp;&nbsp ;[#d][#h][#m][#s][#[ms]]</BR>où [ ] indique un paramètre facultatif et # une valeur numérique.</BR>e.g. : 1d2h, signifie un jour et deux heures. (Voir Drools Fusion)
 
 objectEditor_remotableLabel=Remotable
 objectEditor_remotableHelp=Marquez cette classe afin de la rendre disponible pour les  services à distance jBPM. (REST, JMS et WS, voir jBPM)
@@ -259,9 +259,9 @@ persistence_domain_objectEditor_audited_field_label=Audité
 persistence_domain_objectEditor_audited_field_help_heading=Audité
 persistence_domain_objectEditor_audited_field_help=Marquez cet objet de données persistant pour le faire auditer (uniquement pour le fournisseur de persistance Hibernate)
 
-persistence_domain_objectEditor_on_make_persistable_message=Un objet de données déjà créé est sur le point d''être rendu persistant.</BR>
+persistence_domain_objectEditor_on_make_persistable_message=Un objet de données déjà créé est sur le point d’être rendu persistant.</BR>
 
-persistence_domain_objectEditor_required_identifier_is_missing_message=Le champ <B><I>Identificateur</I></B> requis n''a pas été trouvé dans l''objet de données actuel. <B><I>Voulez-vous le générer automatiquement ?</I></B></BR></BR>
+persistence_domain_objectEditor_required_identifier_is_missing_message=Le champ <B><I>Identifiant</I></B> obligatoire est introuvable dans l’objet de données actuel. <B><I>Voulez-vous le générer automatiquement ?</I></B></BR></BR>
 
 persistence_domain_objectEditor_review_relationship_fields_message=Il se peut que les champs de relation suivants doivent être vérifiés manuellement afin d''ajouter les options de configuration de relation manquantes, le cas échéant :
 
@@ -280,7 +280,7 @@ persistence_domain_fieldEditor_identifier_field_help=Marque le champ actuel comm
 
 persistence_domain_fieldEditor_generation_strategy_field_label=Stratégie de génération
 persistence_domain_fieldEditor_generation_strategy_field_help_heading=Stratégie de génération
-persistence_domain_fieldEditor_generation_strategy_field_help=La stratégie de génération établit le mode de génération automatique des valeurs d''identifiant lorsque les instances de l''objet de données sont créées et stockées dans une base de données (par exemple, par les formulaires associés aux tâches humaines des processus jBPM). &#8217;Lorsque le champ Identifiant par défaut est créé, la stratégie de génération est également définie automatiquement et il est vivement conseillé d''utiliser cette configuration.
+persistence_domain_fieldEditor_generation_strategy_field_help=La stratégie de génération établit le mode de génération automatique des valeurs d''identifiant lorsque les instances de l''objet de données sont créées et stockées dans une base de données (par exemple, par les formulaires associés aux tâches humaines des processus jBPM). Lorsque le champ Identifiant par défaut est créé, la stratégie de génération est également définie automatiquement et il est vivement conseillé d’utiliser cette configuration.
 
 persistence_domain_fieldEditor_sequence_generator_field_label=Générateur de séquences
 persistence_domain_fieldEditor_sequence_generator_field_help_heading=Générateur de séquences
