--- a/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_es.properties
@@ -63,9 +63,9 @@ DriverDefEditor.InvalidDriverClassMessage=Se requiere un nombre de clase de cond
 DriverDefEditor.InvalidGroupIdMessage=Se requiere una identificación de grupo válida
 DriverDefEditor.InvalidArtifactIdMessage=Se requiere una identificación del artefacto válida
 DriverDefEditor.InvalidVersionMessage=Se requiere un número de versión válido
-DriverDefEditor.DriverHasDependantsForSaveMessage=Se han encontrado instancias de fuentes de datos que dependen de este controlador. <BR>Los cambios en este controlador pueden dejarlos en un estado STALE o inconsistente.¿Todavía quieres guardar los cambios?</B>
+DriverDefEditor.DriverHasDependantsForSaveMessage=Se han encontrado instancias de fuentes de datos que dependen de este controlador. <BR>Los cambios en este controlador pueden dejarlas en un estado OBSOLETO o inconsistente.<BR><BR><B>¿Aún desea guardar los cambios?</B>
 
-DriverDefEditor.DriverHasDependantsForDeleteMessage=Se han encontrado instancias de fuentes de datos que dependen de este controlador. <BR>La eliminación de este controlador puede dejarlos en un estado STALE o inconsistente</B>
+DriverDefEditor.DriverHasDependantsForDeleteMessage=Se han encontrado instancias de fuentes de datos que dependen de este controlador. <BR>La eliminación en este controlador puede dejarlas en un estado OBSOLETO o inconsistente.<BR><BR><B>¿Aún desea eliminarlo?</B>
 
 NewDriverDefWizard.title=Nuevo controlador
 NewDriverDefWizard.DriverCreatedMessage=Controlador: {0} se creó correctamente
