--- a/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-datasource-mgmt/kie-wb-common-datasource-mgmt-client/src/main/resources/org/kie/workbench/common/screens/datasource/management/client/resources/i18n/DataSourceManagementConstants_fr.properties
@@ -34,7 +34,7 @@ DataSourceDefEditor.ConnectionTestFailedMessage=Échec du test de connexion
 
 DataSourceDefEditorViewImpl.browseContent=Parcourir le contenu
 
-DataSourceDefEditor.DataSourceHasBeenReferencedForDeleteMessage=La source de données actuelle a été référencée. <BR>La suppression peut entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même la supprimer ?</B>
+DataSourceDefEditor.DataSourceHasBeenReferencedForDeleteMessage=La source de données actuelle a été référencée.<BR>La suppression peut entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même la supprimer ?</B>
 
 DataSourceDefEditor.DataSourceHasBeenReferencedForSaveMessage=La source de données actuelle a été référencée.<BR>Les modifications peuvent entraîner des erreurs au niveau des clients dépendants.<BR><BR><B>Voulez-vous quand même enregistrer les modifications ?</B>
 
@@ -63,9 +63,9 @@ DriverDefEditor.InvalidDriverClassMessage=Un nom de classe de pilote valide est 
 DriverDefEditor.InvalidGroupIdMessage=Un ID de groupe valide est requis
 DriverDefEditor.InvalidArtifactIdMessage=Un ID d''artefact valide est requis
 DriverDefEditor.InvalidVersionMessage=Un numéro de version valide est requis
-DriverDefEditor.DriverHasDependantsForSaveMessage=Les instances de la source de données qui dépendent de ce pilote ont été trouvées. <BR>Les changements sur ce pilote peuvent les laisser dans un état PÉRIMÉ ou incohérent. <BR><BR><B>Voulez-vous toujours enregistrer les changements ?</B>
+DriverDefEditor.DriverHasDependantsForSaveMessage=Des instances de source de données qui dépendent de ce pilote ont été trouvées. <BR>Les modifications apportées à ce pilote peuvent lui conférer un état PÉRIMÉ ou incohérent.<BR><BR><B>Voulez-vous quand même enregistrer les modifications ?</B>
 
-DriverDefEditor.DriverHasDependantsForDeleteMessage=Les instances de la source de données qui dépendent de ce pilote ont été trouvées. <BR>La suppression de ce pilote peut les laisser dans un statut PÉRIMÉ ou incohérent. <BR><BR><B>Voulez-vous toujours le supprimer ?</B>
+DriverDefEditor.DriverHasDependantsForDeleteMessage=Des instances de source de données qui dépendent de ce pilote ont été trouvées. <BR>La suppression de ce pilote peut lui conférer un état PÉRIMÉ ou incohérent.<BR><BR><B>Voulez-vous quand même le supprimer ?</B>
 
 NewDriverDefWizard.title=Nouveau pilote
 NewDriverDefWizard.DriverCreatedMessage=Le pilote {0} a été créé
