--- a/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-editor/kie-wb-common-project-editor-client/src/main/resources/org/kie/workbench/common/screens/projecteditor/client/resources/i18n/ProjectEditorConstants_ja.properties
@@ -14,8 +14,8 @@
 # limitations under the License.
 #
 ProjectModel=プロジェクトモデル
-StatefulKSessions=ステートフルな KIE セッション
-StatelessKSessions=ステートレスな KIE セッション
+StatefulKSessions=ステートフル KIE sessions
+StatelessKSessions=ステートレス KIE sessions
 EqualsBehavior=等しい動作
 EventProcessingMode=イベント処理モード
 Clock=クロック
@@ -107,7 +107,7 @@ NewProjectWizard=新規プロジェクトウィザード
 IncludedKnowledgeBases=Include された KIE bases
 Stateful=ステートフル
 Stateless=ステートレス
-State=State
+State=ステート
 WorkItemHandler=ワークアイテムハンドラー
 Default=デフォルト
 Options=オプション
@@ -123,12 +123,12 @@ Close=閉じる
 Listeners=リスナー
 WorkItemHandlers=ワークアイテムハンドラー
 InvalidPackageName=パッケージ名 "{0}" は有効な ID ではありません。
-KnowledgeSessions=KIE セッション
+KnowledgeSessions=KIE sessions
 ThereAlreadyExistAnItemWithTheGivenNamePleaseSelectAnotherName=すでに該当する名前のアイテムが存在します。別の名前を選択してください。
 ProjectScreenWithName=プロジェクト: [{0}]
 RefreshProblemsPanel=更新
 Refreshing=リフレッシュ中...
-ABuildIsAlreadyRunning=ビルドはすでに実行されています。
+ABuildIsAlreadyRunning=ビルドは既に実行されています。
 XsdIDError=名前は文字またはアンダーラインで始まる必要があり、文字、数字、アンダーライン、ハイフン、およびピリオドのみを使用できます。
 NoDependencies=定義された依存関係がありません。
 EnterAGroupID=グループ ID を入力...
@@ -152,8 +152,8 @@ WhiteList=パッケージのホワイトリスト
 SomePackagesIncluded=含まれているいくつかのパッケージ
 Repositories=リポジトリー
 RepositoriesValidation=検証
-RepositoriesValidationExplanationL1=これらの Maven リポジトリは、(1) 新規プロジェクトまたはモジュールの作成時、(2) プロジェクトを Maven リポジトリにインストールまたはデプロイする際に、プロセスの GAV の一意性を確認するために使用されます。
-RepositoriesValidationExplanationL2=これらはプロジェクトの pom、プロジェクトのディストリビューション管理設定および Maven のグローバル設定から取得されます。
+RepositoriesValidationExplanationL1=これらの Maven リポジトリは、(1) 新規プロジェクトまたはモジュールの作成時、(2) プロジェクトを Maven リポジトリにインストールまたはデプロイする際に、プロセスの GAV の一意性を確認するために使用されます。 
+RepositoriesValidationExplanationL2=これらはプロジェクトの pom、プロジェクトのディストリビューション管理設定および  Maven のグローバル設定から取得されます。
 RepositoryInclude=含める
 Select=選択
 DependencyIsMissingAVersion=依存関係でバージョンが見つかりません
@@ -163,7 +163,7 @@ Dependency=依存関係
 DeploySuccessful=サーバー設定のデプロイメントに成功しました
 StartContainer=デプロイメントユニットをスタートしますか？
 NoServersAvailableForProvisioning=アクティブなサーバーが無いのでプロビジョニングできません
-ContainerIdAlreadyInUse=コンテナー名はすでに使用されています。他の名前を指定してください。
+ContainerIdAlreadyInUse=コンテナ名は既に使用されています。他の名前を指定してください。
 ProjectPreferences=プロジェクトの詳細設定
 DeployFailed=サーバー設定のデプロイに失敗しました
 DeploymentSkippedDueToNoServerTemplateConfiguredForMode=デプロイメントはスキップされました。''{0}'' モードで実行中のサーバーが見つかりませんでした。
@@ -171,5 +171,5 @@ DeploymentSkippedCannotUpdateDeploymentsOnProduction=デプロイメントはス
 DeploySuccessfulButContainerFailedToStart=サーバー設定へのデプロイは成功しましたが、コンテナの開始に失敗しました。
 DeploySuccessfulAndContainerStarted=サーバー設定へのデプロイに成功し、コンテナの開始に成功しました。
 DeploySuccessfulAndContainerUpdated=サーバー設定へのデプロイに成功し、コンテナの更新に成功しました。
-ViewDeploymentDetails=デプロイメントの詳細を表示する
+ViewDeploymentDetails=デプロイメントの詳細表示
 
