--- a/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-project-imports-editor/kie-wb-common-project-imports-editor-client/src/main/resources/org/kie/workbench/common/screens/projectimportsscreen/client/resources/i18n/ProjectConfigScreenConstants_ja.properties
@@ -14,8 +14,8 @@
 # limitations under the License.
 #
 ProjectModel=プロジェクトモデル
-StatefulKSessions=ステートフルな KIE セッション
-StatelessKSessions=ステートレスな KIE セッション
+StatefulKSessions=ステートフル KIE sessions
+StatelessKSessions=ステートレス KIE sessions
 EqualsBehavior=等しい動作
 EventProcessingMode=イベント処理モード
 Clock=クロック
