--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/admin/resources/i18n/PreferencesConstants_fr.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/admin/resources/i18n/PreferencesConstants_fr.properties
@@ -14,7 +14,7 @@
 ## limitations under the License.
 ##
 LibraryPreferences.Title=Projets
-ArtifactRepositoryPreferences.Title=Référentiel d''artefacts
+ArtifactRepositoryPreferences.Title=Référentiel d’artefacts
 ProfilePreferences.Title=Profils
 #Profile specific properties
 ProfilePreferences.Label=Sélectionner un profil
