--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_es.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants_es.properties
@@ -89,7 +89,7 @@ CustomTasksAdministration=Administración de las tareas de servicio
 DataTransfer=Transferencia de datos de Dashbuilder
 AccessDataTransfer=Acceso a la transferencia de datos del Dashbuilder
 AccessDataTransferHelp=Permiso para importar y exportar datos del dashbuilder (conjuntos de datos, perspectivas y navegación).
-ShowMetricsTab=Mostrar la pestaña de métricas del proyecto
+ShowMetricsTab=Métrica del proyecto
 ShowMetricsTabHelp=Permiso para mostrar la pestaña de métricas del proyecto
 ShowChangeRequestTab=Mostrar la ficha de solicitud de modificación del proyecto
 ShowChangeRequestTabHelp=Permiso para mostrar u ocultar la pestaña de solicitud de cambio del proyecto
