--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_ja.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants_ja.properties
@@ -24,14 +24,14 @@ TestRunnerReportingViewImpl.Overview=概要
 TestRunnerReportingViewImpl.ViewAlerts=アラートの表示
 TestRunnerReportingViewImpl.ScenarioStatus=シナリオのステータス
 TestResultDonutPresenter.Passed=合格
-TestResultDonutPresenter.Failed=Failed
+TestResultDonutPresenter.Failed=失敗
 GenericErrorPopup.SystemErrorTitle=システムエラー
 GenericErrorPopup.SystemErrorAlert=予期しないシステムエラーが発生しました。
-GenericErrorPopup.SystemErrorDetails=システムが処理方法を知らない予期しないイベントが発生しました。
+GenericErrorPopup.SystemErrorDetails=予期しないイベントが発生しました。当システムではこのイベントの処理方法が分かりません。
 GenericErrorPopup.SystemErrorDetailsInLog=詳細がシステムログファイルに送信されました。
 GenericErrorPopup.ErrorDetails=エラーの詳細
 GenericErrorPopup.ErrorId=ID: {0}
-GenericErrorPopup.DoNotShowAgainMsg=以下の間、このメッセージを表示しない
+GenericErrorPopup.DoNotShowAgainMsg=以下の期間、このメッセージを表示しない
 GenericErrorPopup.TimeSelectionOneHour=1 時間
 GenericErrorPopup.TimeSelectionTwoHours=2 時間
 GenericErrorPopup.TimeSelectionThirtyMinutes=30 分
