--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_es.properties
@@ -38,6 +38,7 @@ MarshallingMessage.elementFailure=Error en el elemento {0} de tipo {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Existe un objeto de datos con el mismo nombre y diferente tipo - Se cambiará a (objeto)
 MarshallingMessage.dataObjectWithName=Tipo de objeto de datos
 MarshallingMessage.dataObjectWithInvalidName=Existe un objeto de datos con un nombre no válido. Los caracteres ilegales serán sustituidos por -
+MarshallingMessage.reusableSubprocessWithoutDataIO=Subproceso reutilizable sin asignaciones Entrada de datos/Salida de datos
 
 SessionCardinalityStateHandler.EmptyStateCaption=Haga clic en un nodo, arrástrelo o interactúe con él
 SessionCardinalityStateHandler.EmptyStateMessage=Para comenzar, haga clic en un nodo de la paleta de la izquierda y arrástrelo al lienzo
