--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_ja.properties
@@ -38,6 +38,7 @@ MarshallingMessage.elementFailure=タイプ {1} の要素 {0} が失敗しまし
 MarshallingMessage.dataObjectsSameNameDifferentType=同じ名前で異なるタイプのデータオブジェクトが存在します - (オブジェクト) に変更になります
 MarshallingMessage.dataObjectWithName=データオブジェクト名
 MarshallingMessage.dataObjectWithInvalidName=無効な名前のデータオブジェクトが存在します。不正な文字が - に置き換えられます。
+MarshallingMessage.reusableSubprocessWithoutDataIO=割り当てのデータ入力/データ出力がない、再利用可能なサブプロセス
 
 SessionCardinalityStateHandler.EmptyStateCaption=ノードをクリックまたはドラッグするか、もしくはノードと対話します
 SessionCardinalityStateHandler.EmptyStateMessage=開始するには、左側のパレットのノードをクリックするか、キャンバスにドラッグします
