--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_es.properties
@@ -1,4 +1,4 @@
-# Copyright 2021 Red Hat, Inc. and/or its affiliates.
+# Copyright 2019 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,3 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+MarshallingMessage.boundaryIgnored=Se ignoró la relación de límites. Elemento de límite: {0}, Padre: {1}
+MarshallingMessage.associationIgnored=Se ignoró la asociación. Origen: {0}, Destino: {1}
+MarshallingMessage.sequenceFlowIgnored=Se ignoró el flujo de secuencias. Origen: {0}, Destino: {1}
+MarshallingMessage.collapsedElementExpanded=Se expandió el elemento contraído {0} de tipo {1\}
+MarshallingMessage.ignoredElement=Se ignoró el elemento {0} de tipo {1\}
+MarshallingMessage.ignoredUnknownElement=Se ignoró el elemento desconocido {0}
+MarshallingMessage.childLaneSetConverted=El conjunto de líneas secundarias {0} se convirtió a la línea {1}
+MarshallingMessage.convertedElement=El elemento {0} de tipo {1} se convirtió a {2}
+MarshallingMessage.elementFailure=Error en el elemento {0} de tipo {1}
+
