--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_fr.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_fr.properties
@@ -1,4 +1,4 @@
-# Copyright 2021 Red Hat, Inc. and/or its affiliates.
+# Copyright 2019 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,3 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+MarshallingMessage.boundaryIgnored=La relation de limite a été ignorée. Élément de limite : {0}, Parent : {1}
+MarshallingMessage.associationIgnored=L''association a été ignorée. Source : {0}, Cible : {1}
+MarshallingMessage.sequenceFlowIgnored=Le flux de séquence a été ignoré. Source : {0}, Cible : {1}
+MarshallingMessage.collapsedElementExpanded=L''élément réduit {0} de type {1} a été développé
+MarshallingMessage.ignoredElement=L''élément {0} de type {1} a été ignoré
+MarshallingMessage.ignoredUnknownElement=L''élément inconnu {0} a été ignoré
+MarshallingMessage.childLaneSetConverted=L''ensemble de voies enfant {0} a été converti en voie {1}
+MarshallingMessage.convertedElement=L''élément {0} de type {1} a été converti en {2}
+MarshallingMessage.elementFailure=Échec sur l''élément {0} de type {1}
+
