--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-backend-api/src/main/resources/org/kie/workbench/common/stunner/core/marshaller/resources/i18n/MarshallingMessagesConstants_ja.properties
@@ -1,4 +1,4 @@
-# Copyright 2021 Red Hat, Inc. and/or its affiliates.
+# Copyright 2019 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,3 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+MarshallingMessage.boundaryIgnored=境界関係は無視されました。境界要素: {0}、親: {1}
+MarshallingMessage.associationIgnored=関連付けが無視されました。ソース: {0}、ターゲット: {1}
+MarshallingMessage.sequenceFlowIgnored=シーケンスフローが無視されました。ソース: {0}、ターゲット: {1}
+MarshallingMessage.collapsedElementExpanded=タイプ {1} の折りたたまれていた要素 {0} が展開されました
+MarshallingMessage.ignoredElement=タイプ {1} の要素 "{0}" が無視されました
+MarshallingMessage.ignoredUnknownElement=不明な要素 "{0}" が無視されました
+MarshallingMessage.childLaneSetConverted=子のレーンセット {0} がレーンに変換されました
+MarshallingMessage.convertedElement=タイプ {1} の要素 {0} が {2} に変換されました
+MarshallingMessage.elementFailure=タイプ {1} の要素 {0} が失敗しました
+
