--- a/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/src/main/resources/org/kie/workbench/common/stunner/core/client/preferences/resources/i18n/StunnerPreferencesConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-core/kie-wb-common-stunner-api/kie-wb-common-stunner-client-api/src/main/resources/org/kie/workbench/common/stunner/core/client/preferences/resources/i18n/StunnerPreferencesConstants_ja.properties
@@ -21,7 +21,7 @@ StunnerPreferences.Label=Stunner 設定
 StunnerPreferences.StunnerDiagramEditorPreferences=ダイアグラムエディター設定
 StunnerDiagramEditorPreferences.Label=ダイアグラムエディター設定フィールド
 StunnerDiagramEditorPreferences.AutoHidePalettePanel.Label=カテゴリーパネルを自動で隠す
-StunnerDiagramEditorPreferences.AutoHidePalettePanel.Help=カテゴリーに関連付けられたツールバーパネルの自動非表示を有効にします。たとえば、カテゴリー項目が選択された場合、またはマウスがパネルを離れた場合など。
+StunnerDiagramEditorPreferences.AutoHidePalettePanel.Help=カテゴリーに関連付けられたツールバーパネルの自動非表示を有効にします。(例: カテゴリー項目が選択された場合、またはマウスがパネルを離れた場合など。)
 StunnerDiagramEditorPreferences.EnableHiDpi.Label=HiDPI を有効にする
 StunnerDiagramEditorPreferences.EnableHiDpi.Help=高解像度のディスプレイを使用しており、文字やオブジェクトがぼやけて表示される場合には、このオプションを有効にします。Mac 上 の Chrome で深刻な HiDPI パフォーマンスの問題があるため、これは現在デフォルトで無効になっています
 
