--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-jbpm-designer-integration/kie-wb-common-stunner-jbpm-designer-integration-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/integration/client/resources/i18n/IntegrationClientConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-jbpm-designer-integration/kie-wb-common-stunner-jbpm-designer-integration-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/integration/client/resources/i18n/IntegrationClientConstants_ja.properties
@@ -29,6 +29,6 @@ integration.actions.confirmSave.confirmMessage=ファイルの移行前に現在
 integration.actions.migrate.message.unExpectedErrorMessage=移行中に予期せぬエラーが発生しました。ダイアグラムは移行されません。
 integration.actions.migrate.toStunner.migrateNoDiagramHasBeenReturned=予期せぬエラー。移行プロセスで、ダイアグラムは返されませんでした。
 
-integration.service.error.JBPM_DESIGNER_PROCESS_ALREADY_EXIST=対象ファイル {0} の jBPM デザイナープロセスはすでに存在します
+integration.service.error.JBPM_DESIGNER_PROCESS_ALREADY_EXIST=対象ファイル {0} の jBPM デザイナープロセスは既に存在します
 integration.service.error.STUNNER_PROCESS_ALREADY_EXIST=ターゲットファイル {0} 向けにビジネスプロセスモデラーのプロセスがすでに存在します
 
