--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_es.properties
@@ -16,7 +16,7 @@ org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.IntermediateEven
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.EndEvents=Eventos finales
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.ConnectingObjects=Conectando objetos
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.Gateways=Puertas de enlace
-org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.CustomTasks=Tareas personalizadas
+org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.CustomTasks=Tipo personalizado
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.Artifacts=Artefactos
 org.kie.workbench.common.stunner.bpmn.definition.BPMNCategories.TextAnnotations=Anotación de texto
 
@@ -117,7 +117,7 @@ org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventCatchin
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventCatching.description=La ejecución del proceso se retrasa hasta que se capta un mensaje determinado
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventCatching.title=Señal intermedia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventCatching.description=La ejecución del proceso se retrasa hasta que se capta una señal determinada. La señalización puede aparecer a través de diferentes procesos
-org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.title=Enlace intermedio
+org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.title=Error intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventCatching.description=Un evento de enlace es un mecanismo para conectar dos secciones de un proceso. Los eventos de enlace pueden utilizarse para crear situaciones de bucle o para evitar largas líneas de flujo de secuencia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateErrorEventCatching.title=Error intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateErrorEventCatching.description=Captura un error con nombre, que fue lanzado por un alcance interno (por ejemplo, un subproceso). Este evento debe estar unido al límite de una actividad
@@ -127,7 +127,7 @@ org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEvent.t
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateCompensationEvent.description=Manejo de la compensación en caso de operaciones con errores parciales. Este evento debe estar unido al límite de una actividad
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventThrowing.title=Señal intermedia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateSignalEventThrowing.description=El evento de lanzamiento de señales emite una señal. Después, continúa la ejecución del proceso. Una señal lanzada puede ser captada varias veces por diferentes eventos de captura de señales
-org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.title=Enlace intermedio
+org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.title=Error intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateLinkEventThrowing.description=Un evento de enlace es un mecanismo para conectar dos secciones de un proceso. Los eventos de enlace pueden utilizarse para crear situaciones de bucle o para evitar largas líneas de flujo de secuencia
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventThrowing.title=Mensaje intermedio
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateMessageEventThrowing.description=El evento de lanzamiento de señales emite un mensaje
@@ -212,7 +212,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.diagram.ProcessInstanc
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.label=Versión
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.description=La versión del proceso
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.GlobalVariables.label=Variables globales
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.MetaDataAttributes.label=Atributos de los metadatos
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.MetaDataAttributes.label=Metadata Attributes
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.GlobalVariables.description=Esta propiedad se usa para declarar variables con alcance global.
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.imports.Imports.label=Importaciones
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.imports.Imports.description=Las importaciones.
@@ -476,13 +476,14 @@ org.kie.workbench.common.stunner.bpmn.definition.property.variables.ProcessVaria
 #######################
 VariablesEditorWidget.Name=Nombre
 VariablesEditorWidget.DataType=Tipo de datos
-VariablesEditorWidget.Tags=Etiquetas
-VariablesEditorWidget.TagsX=Etiquetas variables
+VariablesEditorWidget.Tags=Etiquetas <i class="fa-info-circle" title="Añadir etiquetas predefinidas o personalizadas a las variables"/>
+VariablesEditorWidget.TagsX=Nombre de la variable
 
 #######################
 # AdvancedData
 #######################
 org.kie.workbench.common.stunner.bpmn.definition.property.variables.AdvancedData.label=Avanzado
+org.kie.workbench.common.stunner.bpmn.definition.property.variables.RootProcessAdvancedData.label=Avanzado
 
 #######################
 # Common Properties
@@ -618,8 +619,8 @@ VariableSearchService.CaseVariableLabelPrefix=(variable de caso)
 #######################
 # Custom Tasks / WID
 #######################
-customTasks.title=Tareas personalizadas
-customTasks.description=Tareas personalizadas
+customTasks.title=Tipo personalizado
+customTasks.description=Tipo personalizado
 #########################
 # Constants
 #########################
@@ -630,7 +631,7 @@ assignee.cannotBeEmpty=El nombre no puede estar vacío
 assignee.searchError=Se produjo un error durante la solicitud de búsqueda de información del usuario. {0}
 notification.label=Notificación
 notifications.label=Notificaciones
-notification.toUsers=Para: usuario(s)
+notification.toUsers=A los usuarios
 notification.toGroups=A los grupos
 notification.toEmails=Para: correo(s) electrónico(s)
 notification.from=Desde
