--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_fr.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_fr.properties
@@ -289,7 +289,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.Interrupt
 org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.ScopedSignalEventExecutionSet.label=Implémentation/Exécution
 org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalRef.label=Signal
 org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalRef.description=Référence du signal
-org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalRef.helpMessage=Les caractères autorisés pour la référence du signal (SignalRef) sont les caractères alphanumériques (a-z, A-Z, 0-9), le caractère deux-points ":", le trait de soulignement "_" et l''espace..<br><br>Les expressions suivantes sont acceptées :<br><ul><li>#{var}</li><li>#{obj.prop}</li><li>#{obj.met(var,o3.var)}</li></ul><br>Vous pouvez combiner deux expressions à l''aide d''un trait d''union "-" (par exemple, exp-#{var}).
+org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalRef.helpMessage=Les caractères autorisés pour la référence du signal (SignalRef) sont les caractères alphanumériques (a-z, A-Z, 0-9), le caractère deux-points ":", le trait de soulignement "_" et l''espace.<br><br>Les expressions suivantes sont acceptées :<br><ul><li>#{var}</li><li>#{obj.prop}</li><li>#{obj.met(var,o3.var)}</li></ul><br>Vous pouvez combiner deux expressions à l’aide d’un trait d''union "-" (par exemple, exp-#{var}).
 org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalScope.label=Portée du signal
 org.kie.workbench.common.stunner.bpmn.definition.property.event.signal.SignalScope.description=Définit le champ de propagation du signal
 
@@ -476,13 +476,14 @@ org.kie.workbench.common.stunner.bpmn.definition.property.variables.ProcessVaria
 #######################
 VariablesEditorWidget.Name=Nom
 VariablesEditorWidget.DataType=Type de données
-VariablesEditorWidget.Tags=Balises <i class="fa fa-info-circle" title="Add Predefined or Custom Tags to Variables"/>
+VariablesEditorWidget.Tags=Tags <i class="fa-info-circle" title="Ajouter des tags prédéfinis ou personnalisés aux variables"/>
 VariablesEditorWidget.TagsX=Balises Variables
 
 #######################
 # AdvancedData
 #######################
 org.kie.workbench.common.stunner.bpmn.definition.property.variables.AdvancedData.label=Avancé
+org.kie.workbench.common.stunner.bpmn.definition.property.variables.RootProcessAdvancedData.label=Avancé
 
 #######################
 # Common Properties
