--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants_ja.properties
@@ -86,7 +86,7 @@ org.kie.workbench.common.stunner.bpmn.definition.StartTimerEvent.description=プ
 org.kie.workbench.common.stunner.bpmn.definition.StartErrorEvent.title=開始エラー
 org.kie.workbench.common.stunner.bpmn.definition.StartErrorEvent.description=名前付きエラーをキャッチして、イベントサブプロセスを開始します。このイベントは、イベントサブプロセス内でのみ使用されます
 org.kie.workbench.common.stunner.bpmn.definition.StartConditionalEvent.title=条件付き開始
-org.kie.workbench.common.stunner.bpmn.definition.StartConditionalEvent.description=ビジネス条件の変化やビジネスルールの一致に応じてプロセスまたはイベントサブプロセスインスタンスを開始します
+org.kie.workbench.common.stunner.bpmn.definition.StartConditionalEvent.description=ビジネス条件の変化やビジネスルールの一致に応じてプロセスまたはサブプロセスインスタンスを開始します
 org.kie.workbench.common.stunner.bpmn.definition.StartEscalationEvent.title=開始エスカレーション
 org.kie.workbench.common.stunner.bpmn.definition.StartEscalationEvent.description=組織内の別のロールへのエスカレーションに反応します。このイベントは、イベントサブプロセス内でのみ使用されます
 org.kie.workbench.common.stunner.bpmn.definition.StartCompensationEvent.title=補償の開始
@@ -102,13 +102,13 @@ org.kie.workbench.common.stunner.bpmn.definition.EventSubprocess.description=イ
 org.kie.workbench.common.stunner.bpmn.definition.MultipleInstanceSubprocess.title=複数のインスタンス
 org.kie.workbench.common.stunner.bpmn.definition.MultipleInstanceSubprocess.description=複数インスタンスサブプロセス
 org.kie.workbench.common.stunner.bpmn.definition.BusinessRuleTask.title=ビジネスルール
-org.kie.workbench.common.stunner.bpmn.definition.BusinessRuleTask.description=実行すべき仕事 - タスクが作業単位です
-org.kie.workbench.common.stunner.bpmn.definition.NoneTask.title=Task
-org.kie.workbench.common.stunner.bpmn.definition.NoneTask.description=実行すべき仕事 - タスクが作業単位です
+org.kie.workbench.common.stunner.bpmn.definition.BusinessRuleTask.description=実行すべき仕事 - タスクが作業単位です。
+org.kie.workbench.common.stunner.bpmn.definition.NoneTask.title=タスク
+org.kie.workbench.common.stunner.bpmn.definition.NoneTask.description=実行すべき仕事 - タスクが作業単位です。
 org.kie.workbench.common.stunner.bpmn.definition.UserTask.title=ユーザー
-org.kie.workbench.common.stunner.bpmn.definition.UserTask.description=実行すべき仕事 - タスクが作業単位です
+org.kie.workbench.common.stunner.bpmn.definition.UserTask.description=実行すべき仕事 - タスクが作業単位です。
 org.kie.workbench.common.stunner.bpmn.definition.ScriptTask.title=スクリプト
-org.kie.workbench.common.stunner.bpmn.definition.ScriptTask.description=実行すべき仕事 - タスクが作業単位です
+org.kie.workbench.common.stunner.bpmn.definition.ScriptTask.description=実行すべき仕事 - タスクが作業単位です。
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateTimerEvent.title=中間タイマー
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateTimerEvent.description=プロセスの実行は、特定の時刻に達するか、一定の時間が経過するまで遅延します。
 org.kie.workbench.common.stunner.bpmn.definition.IntermediateConditionalEvent.title=条件付中間
@@ -161,7 +161,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.background.BgColor.des
 org.kie.workbench.common.stunner.bpmn.definition.property.background.BorderColor.label=ボーダーの色
 org.kie.workbench.common.stunner.bpmn.definition.property.background.BorderColor.description=ボーダーの色
 org.kie.workbench.common.stunner.bpmn.definition.property.background.BorderSize.label=ボーダーサイズ
-org.kie.workbench.common.stunner.bpmn.definition.property.background.BorderSize.description=ボーダーサイズ
+org.kie.workbench.common.stunner.bpmn.definition.property.background.BorderSize.description=ボーダーの色
 
 #######################
 # SequenceFlowExecutionSet
@@ -198,16 +198,16 @@ org.kie.workbench.common.stunner.bpmn.definition.property.service.GenericService
 #######################
 # DiagramSet
 #######################
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.DiagramSet.label=Process
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.DiagramSet.label=プロセス
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.AdHoc.label=アドホック
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.AdHoc.description=アドホックプロセスです
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.AdHoc.description=アドホックプロセスである
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Executable.label=実行可能
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Executable.description=実行ファイルです
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Executable.description=実行ファイルである
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Id.label=ID
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Id.description=プロセス ID
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Package.label=パッケージ
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Package.description=プロセスパッケージ
-org.kie.workbench.common.stunner.bpmn.definition.property.diagram.ProcessInstanceDescription.label=Process Instance Description
+org.kie.workbench.common.stunner.bpmn.definition.property.diagram.ProcessInstanceDescription.label=プロセスインスタンスの説明
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.ProcessInstanceDescription.description=この属性は、プロセスインスタンスをアノテートするのに使用します。
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.label=バージョン
 org.kie.workbench.common.stunner.bpmn.definition.property.diagram.Version.description=プロセスのバージョン
@@ -276,7 +276,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.font.FontBorderSize.la
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontBorderSize.description=フォントボーダーのサイズ
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontColor.label=フォントの色
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontColor.description=フォントの色
-org.kie.workbench.common.stunner.bpmn.definition.property.font.FontFamily.label=フォントファミリー
+org.kie.workbench.common.stunner.bpmn.definition.property.font.FontFamily.label=フォントファミリ
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontFamily.description=フォントファミリー
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontSize.label=フォントのサイズ
 org.kie.workbench.common.stunner.bpmn.definition.property.font.FontSize.description=フォントのサイズ
@@ -327,7 +327,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.event.escalation.Escal
 org.kie.workbench.common.stunner.bpmn.definition.property.event.compensation.CompensationEventExecutionSet.label=実装/実行
 org.kie.workbench.common.stunner.bpmn.definition.property.event.compensation.ActivityRef.label=アクティビティーリファレンス
 org.kie.workbench.common.stunner.bpmn.definition.property.event.compensation.ActivityRef.description=アクティビティーリファレンス
-org.kie.workbench.common.stunner.bpmn.definition.property.event.compensation.ActivityRef.helpMessage=Compensation イベントに関連するアクティビティー
+org.kie.workbench.common.stunner.bpmn.definition.property.event.compensation.ActivityRef.helpMessage=Compensation イベントに関連するアクティビティ
 
 #######################
 # GatewayExecutionSet
@@ -399,14 +399,14 @@ org.kie.workbench.common.stunner.bpmn.definition.property.task.Description.label
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Description.description=説明
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Independent.label=独立
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Independent.description=サブプロセスは独立したプロセスとして実行されます
-org.kie.workbench.common.stunner.bpmn.definition.property.task.IsAsync.label=非同期です
-org.kie.workbench.common.stunner.bpmn.definition.property.task.IsAsync.description=非同期です
+org.kie.workbench.common.stunner.bpmn.definition.property.task.IsAsync.label=非同期である
+org.kie.workbench.common.stunner.bpmn.definition.property.task.IsAsync.description=非同期である
 org.kie.workbench.common.stunner.bpmn.definition.property.task.OnEntryAction.label=開始時アクション
 org.kie.workbench.common.stunner.bpmn.definition.property.task.OnEntryAction.description=開始時アクション
 org.kie.workbench.common.stunner.bpmn.definition.property.task.OnExitAction.label=終了時アクション
 org.kie.workbench.common.stunner.bpmn.definition.property.task.OnExitAction.description=終了時アクション
-org.kie.workbench.common.stunner.bpmn.definition.property.task.DecisionName.label=デシジョンの名前
-org.kie.workbench.common.stunner.bpmn.definition.property.task.DecisionName.description=デシジョンの名前
+org.kie.workbench.common.stunner.bpmn.definition.property.task.DecisionName.label=ディシジョンの名前
+org.kie.workbench.common.stunner.bpmn.definition.property.task.DecisionName.description=ディシジョンの名前
 org.kie.workbench.common.stunner.bpmn.definition.property.task.DmnModelName.label=DMN モデル名
 org.kie.workbench.common.stunner.bpmn.definition.property.task.DmnModelName.description=DMN モデル名
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Namespace.label=名前空間
@@ -418,7 +418,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.task.RuleFlowGroup.des
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Script.label=スクリプト
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Script.description=スクリプト
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Skippable.label=省略可能
-org.kie.workbench.common.stunner.bpmn.definition.property.task.Skippable.description=省略可能です
+org.kie.workbench.common.stunner.bpmn.definition.property.task.Skippable.description=省略可能である
 org.kie.workbench.common.stunner.bpmn.definition.property.general.SLADueDate.label=SLA 期日
 org.kie.workbench.common.stunner.bpmn.definition.property.general.SLADueDate.description=SLA 期日
 org.kie.workbench.common.stunner.bpmn.definition.property.task.Subject.label=件名
@@ -432,7 +432,7 @@ org.kie.workbench.common.stunner.bpmn.definition.property.task.WaitForCompletion
 org.kie.workbench.common.stunner.bpmn.definition.property.task.IsMultipleInstance.label=複数のインスタンス
 org.kie.workbench.common.stunner.bpmn.definition.property.task.IsMultipleInstance.description=タスクまたはサブプロセスが複数回実行されるかどうかを示します
 org.kie.workbench.common.stunner.bpmn.definition.property.task.AbortParent.label=親の強制終了
-org.kie.workbench.common.stunner.bpmn.definition.property.task.AbortParent.description=現在のサブプロセスが中断された場合に、親プロセス (再利用可能なサブプロセスアクティビティーを含むプロセス) を中断するべきかどうかを決定します
+org.kie.workbench.common.stunner.bpmn.definition.property.task.AbortParent.description=現在のサブプロセスが中断された場合に、親プロセス (再利用サブプロセスアクティビティーを含むプロセス) を中断するべきかどうかを決定します 
 
 
 #######################
@@ -450,13 +450,13 @@ org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceC
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceCollectionOutput.helpMessage=複数インスタンスノードの全出力を集める要素のコレクションを表すプロセス変数
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceCompletionCondition.label=MI 完了条件 (mvel)
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceCompletionCondition.description=MI 完了条件
-org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceCompletionCondition.helpMessage=指定の複数インスタンスノードがすでに完了できるているかどうかを確認するため、各インスタンスの完了時に評価される MVEL 式。true と評価された場合、残りのすべてのインスタンスはキャンセルされます。
+org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceCompletionCondition.helpMessage=指定の複数インスタンスノードがすでに完了できているかどうかを確認するため、各インスタンスの完了時に評価される MVEL 式。true と評価された場合、残りのすべてのインスタンスはキャンセルされます。
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataInput.label=MI データ入力
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataInput.description=MI のデータ入力を設定します
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataInput.helpMessage=コレクションの現在の要素を含む変数の名前。これにより、複数インスタンスノードは選択した要素にアクセスできます。
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataOutput.label=MI データ出力
 org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataOutput.description=MI のデータ出力を設定します
-org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataOutput.helpMessage=複数インスタンスノードで実行されているインスタンスからの現在のアウトプットを含む変数の名前
+org.kie.workbench.common.stunner.bpmn.definition.property.task.MultipleInstanceDataOutput.helpMessage=複数インスタンスノードで実行されているインスタンスからのアウトプットを持つ変数名
 
 #######################
 # EventSubprocessExecutionSet & EmbeddedSubprocessExecutionSet
@@ -475,14 +475,15 @@ org.kie.workbench.common.stunner.bpmn.definition.property.variables.ProcessVaria
 # VariablesEditor
 #######################
 VariablesEditorWidget.Name=名前
-VariablesEditorWidget.DataType=データタイプ
-VariablesEditorWidget.Tags=タグ <i class="fa fa-info-circle" title="Add Predefined or Custom Tags to Variables"/>
+VariablesEditorWidget.DataType=データ型
+VariablesEditorWidget.Tags=タグ <i class="fa fa-info-circle" title="事前定義済みまたはカスタムタグを変数に追加する"/>
 VariablesEditorWidget.TagsX=変数タグ
 
 #######################
 # AdvancedData
 #######################
 org.kie.workbench.common.stunner.bpmn.definition.property.variables.AdvancedData.label=高度
+org.kie.workbench.common.stunner.bpmn.definition.property.variables.RootProcessAdvancedData.label=高度
 
 #######################
 # Common Properties
@@ -531,7 +532,7 @@ TimerSettingsFieldEditorView.Expression_Help_Line=#{expression} などの式 (#{
 
 TimerSettingsFieldEditorView.TimeCycle=複数回実行する
 TimerSettingsFieldEditorView.TimeCycle_Placeholder=時間サイクルの値または式 #{expression}
-TimerSettingsFieldEditorView.MultipleTimer_Help_Header=必要なタイマーサイクルは、
+TimerSettingsFieldEditorView.MultipleTimer_Help_Header=必要な時間サイクルは、
 TimerSettingsFieldEditorView.MultipleTimer_Help_Line1=ISO: "R[n]/Duration]|Timer-Date[/Duration/Timer-Date] 形式の ISO-8601 繰り返し可能間隔 (R3/PT8M3S、R3/2020-04-14T08:15:00Z/P3DT2H など)
 TimerSettingsFieldEditorView.MultipleTimer_Help_Line2=Cron: "nd nh nm ns nms" 形式の cron 間隔 (1d 8h、5m 3s など)
 TimerSettingsFieldEditorView.MultipleTimer_Help_Line3=Cron: または quartz cron 間隔 (''0 0 0 1 * ?'' など)''0 0 0 1 * ?'' 詳細は製品ドキュメントを参照してください
@@ -551,13 +552,13 @@ KieFunctions.between.param2.help=比較の下限
 KieFunctions.between.param3.name=最大値
 KieFunctions.between.param3.help=比較の上限
 
-KieFunctions.isNull=null です
+KieFunctions.isNull=空
 
 KieFunctions.equalsTo=同等
 KieFunctions.equalsTo.param2.name=値
 KieFunctions.equalsTo.param2.help=等しいかどうかを確認する値
 
-KieFunctions.isEmpty=空です
+KieFunctions.isEmpty=空
 
 KieFunctions.contains=含む
 KieFunctions.contains.param2.name=値
@@ -587,8 +588,8 @@ KieFunctions.lessOrEqualThan=同等またはそれ以下
 KieFunctions.lessOrEqualThan.param2.name=最大値
 KieFunctions.lessOrEqualThan.param2.help=比較の上限
 
-KieFunctions.isTrue=true です
-KieFunctions.isFalse=false です
+KieFunctions.isTrue=true
+KieFunctions.isFalse=false
 
 SimpleConditionEditorView.ProcessVariable=プロセス変数
 SimpleConditionEditorView.Condition=条件
