--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_es.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_es.properties
@@ -31,7 +31,7 @@ Data_Output_and_Assignment=Salida y asignación de datos
 Data_Outputs_and_Assignments=Salidas y asignaciones de datos
 Data_IO=E/S de datos
 Edit=Editar
-Enter_expression=Introduzca la expresión
+Enter_expression=Modificar expresión
 Enter_type=Ingresar el tipo
 Error_retrieving_datatypes=Error en la recuperación de los tipos de datos
 Invalid_character_in_name=Carácter no válido en el nombre
@@ -77,7 +77,7 @@ Language=Lenguaje
 replyToOptional=Responder a (opcional)
 replyToMessage=Un usuario o grupo opcional que debe recibir respuestas a la notificación.
 message=Mensaje
-toUsers=Para: usuario(s)
+toUsers=A los usuarios
 toGroups=A los grupos
 toEmails=Para: correo(s) electrónico(s)
 subjectPlaceholder=Introduzca el asunto aquí.
@@ -90,12 +90,12 @@ taskExpirationDefinition=Definición de la expiración de la tarea
 notificationPopover=Esta definición de tiempo determina cuándo se producirá la notificación.
 notifyLabel=Notificar a
 notifyAfter=Notificar después de la expiración de la tarea
-notificationRepeat=Repetición de la notificación
+notificationRepeat=Notificación
 notifyEvery=Notificar a cada
 until=Hasta
 expressionTextArea=Ejemplo de notación de expresión básica para un intervalo: P2y10M14dT20h13m
 taskStateChangesLabel=Cambios en el estado de la tarea
 repeatCountReachesLabel=La repetición del recuento alcanza
-syntaxRequirement=Para conocer los requisitos de sintaxis de las expresiones ISO 8601, consulte https://www.iso.org/
+syntaxRequirement=Para conocer los requisitos sintácticos de las expresiones ISO 8601, consulte https://www.iso.org/
 incorrectEmail=Uno de los correos electrónicos tiene un valor no válido:
 
