--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_es.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_es.properties
@@ -49,7 +49,7 @@ ItemCopiedSuccessfully=El ítem se copió correctamente.
 ItemMovedSuccessfully=El ítem se movió correctamente.
 ItemValidatedSuccessfully=El ítem se validó correctamente.
 ItemPathSubheading=Ruta:
-ItemUndefinedPath=<No Path selected>
+ItemUndefinedPath=<No hay ruta seleccionada>
 ItemRestored=El ítem se volvió a cargar debido a una operación de restauración.
 AddAnOptionalCheckInComment=Agregar un comentario de inserción opcional
 CheckIn=Entrar
