--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_fr.properties
@@ -49,7 +49,7 @@ ItemCopiedSuccessfully=L''élément a été copié.
 ItemMovedSuccessfully=L''élément a été déplacé.
 ItemValidatedSuccessfully=L''élément a été validé.
 ItemPathSubheading=Chemin d''accès :
-ItemUndefinedPath=<No Path selected>
+ItemUndefinedPath=<Aucun chemin d’accès sélectionné>
 ItemRestored=Élément rechargé en raison d''une opération de restauration.
 AddAnOptionalCheckInComment=Ajouter un commentaire d''archivage facultatif
 CheckIn=Archiver
