--- a/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_ja.properties
+++ b/kie-wb-common-widgets/kie-wb-common-ui/src/main/resources/org/kie/workbench/common/widgets/client/resources/i18n/CommonConstants_ja.properties
@@ -59,7 +59,7 @@ Cancel=キャンセル
 Name=名前
 WholeNumberInteger=数字全体 (整数)
 TrueOrFalse=True か False
-Date=Date
+Date=日付
 Text=テキスト
 DecimalNumber=10 進数
 DeleteItem=アイテムを削除
