--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_es.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_es.properties
@@ -37,13 +37,13 @@ NewItem=Nuevo ítem
 Trash=Basura
 RuleDocHint=Esta es la documentación de las reglas. Descripciones humanas amistosas de la lógica comercial
 Description=Descripción
-documentationDefault=<documentation>
+documentationDefault=<documentación>
 Discussion=Debate
 AddADiscussionComment=Agregar un comentario al debate
 EraseAllComments=Borrar todos los comentarios
 EraseAllCommentsWarning=¿Borrar TODOS los ítems de debate? Tenga en cuenta que esto no se puede deshacer. ¿Está seguro?
 Cancel=Cancelar
-smallCommentBy0On1Small=<small>Comentario de {0} sobre {1}:</small>
+smallCommentBy0On1Small=<small>Comentario de {0} en {1}:</small>
 VersionHistory1=Historia de la versión
 NoHistory=No hay historia.
 View=Ver
