--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/MetadataConstants_fr.properties
@@ -43,7 +43,7 @@ AddADiscussionComment=Ajouter un commentaire de discussion
 EraseAllComments=Effacer tous les commentaires
 EraseAllCommentsWarning=Effacer TOUS les éléments de la discussion ? NOTEZ que cette action est irréversible. En êtes-vous sûr ?
 Cancel=Annuler
-smallCommentBy0On1Small=<small>Commentaire de {0} sur  {1}:</small>
+smallCommentBy0On1Small=<small>Commentaire de {0} le {1} :</small>
 VersionHistory1=Historique des versions
 NoHistory=Aucun historique.
 View=Afficher
