--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_fr.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants_fr.properties
@@ -38,6 +38,7 @@ MarshallingMessage.elementFailure=Échec sur l''élément {0} de type {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=L''objet de données existe avec le même nom et un type différent - sera changé en (objet)
 MarshallingMessage.dataObjectWithName=Data Object-Name
 MarshallingMessage.dataObjectWithInvalidName=Il existe un objet de données dont le nom est invalide Les caractères illégaux seront remplacés par -
+MarshallingMessage.reusableSubprocessWithoutDataIO=Sous-processus réutilisable sans affectations Entrée/sortie de données
 
 SessionCardinalityStateHandler.EmptyStateCaption=Cliquez sur un nœud, faites-le glisser ou interagissez avec celui-ci
 SessionCardinalityStateHandler.EmptyStateMessage=Pour commencer, cliquez sur un nœud ou faites-le glisser dans la palette de gauche sur le canevas
