--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants_ja.properties
@@ -48,14 +48,14 @@ assignment_target_help=出力変数のターゲットは、変数または式に
 This_input_should_be_entered_as_a_property_for_the_task=この入力は、タスクのプロパティーとして入力してください
 Removed_invalid_characters_from_name=無効な文字を名前から削除しました
 Removed_invalid_characters_from_value=無効な文字を値から削除しました
-A_Data_Input_with_this_name_already_exists=この名前のデータ入力はすでに存在します
+A_Data_Input_with_this_name_already_exists=この名前のデータ入力は既に存在します
 ProcessModel=プロセスモデル
-ConfirmCloseBusinessProcessEditor=ビジネスプロセスでは、変更が保存されていない場合もあります。エディターを終了してもよろしいですか?
+ConfirmCloseBusinessProcessEditor=ビジネスプロセスには、保存前の変更が含まれている可能性があります。エディターを終了してもよろしいですか?
 DeleteDiagramVariableError=このプロセス変数は、1 つ以上のタスクまたは他のプロセスノードで使用されているため、削除できません。変数を削除するには、タスク割り当て変数を最初に削除するか、プロセスノードでその他の使用法を削除してください。
 RenameDiagramVariableError=このプロセス変数は、1 つ以上のタスクまたは他のプロセスノードで使用されているため、名前を変更できません。変数の名前を変更するには、タスク割り当て変数を最初に削除するか、プロセスノードでその他の使用法を削除してください。
-DuplicatedVariableNameError=名前が: {0} の変数はすでに存在しています
+DuplicatedVariableNameError=名前が: {0} の変数は既に存在しています
 DuplicatedAttributeNameError=名前が: {0} の属性はすでに存在しています
-AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=名前が: {0} の割り当ては、現行モードの複数インスタンスデータ入力または出力としてすでに存在しています
+AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=名前が: {0} の割り当ては、現行モードの複数インスタンスデータ入力または出力として既に存在しています
 Imports=インポート
 No_Imports=インポートなし
 No_Data_Type_Import=データタイプインポートなし
