--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_ja.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants_ja.properties
@@ -12,7 +12,7 @@ editor.actions.migrateTitle=ダイアグラムを移行
 editor.actions.migrateWarning=警告: このアクションは取り消せません。
 editor.actions.migrateConfirmAction=ダイアグラムを移行することで、現在のファイルを jBPM デザイナーで編集する準備ができます。このアクションを取り消すことはできません。注意して進めてください。
 editor.actions.migrateCommitMessage=ファイル {0} は Stunner から jBPM デザイナーに移行されました
-editor.actions.migrateErrorProcessAlreadyExists=対象ファイル {0} の jBPM デザイナープロセスはすでに存在します
+editor.actions.migrateErrorProcessAlreadyExists=対象ファイル {0} の jBPM デザイナープロセスは既に存在します
 editor.actions.migrateErrorGeneric=移行中にエラーが発生しました
 
 editor.error.generateSvgFileError=ダイアグラム svgファイルの生成中にエラーが発生しました
